src/css/global/layout.scss
main {
  padding: 24px 0;

  @media #{$mq-md} {
    padding: 40px 0;
  }

  &.has-header {
    padding-top: 0;
  }
}

.base-grid {
  display: grid;
  grid-column-gap: $grid-gap-mobile;
  grid-template-columns: [full-start] 1fr [main-start] minmax(0, 1024px) [main-end] 1fr [full-end];

  @media #{$mq-md} {
    grid-column-gap: $grid-gap;
  }

  // TODO move to section.scss
  > section {
    margin-top: 24px;

    @media #{$mq-md} {
      margin-top: 40px;
    }

    &:first-child {
      margin-top: 0;
    }

    &:not(.section-full) {
      grid-column: main;
    }
  }
}

.section-background + .section-background {
  margin-top: 0;
}

.section-full {
  grid-column: full;
}

.section-full-bg {
  background-color: $color-gray-10;
}

.container {
  padding: 0 $grid-gap-mobile;

  @media #{$mq-md} {
    margin: 0 auto;
    max-width: ($container-max-width + $grid-gap * 2);
    padding: 0 $grid-gap;
    position: relative;
  }
}

.section-full-container {
  padding: 16px;

  @media #{$mq-md} {
    margin: 0 auto;
    max-width: 1084px;
    padding: 32px;
    position: relative;
  }
}

.section-header {
  align-items: center;
  display: flex;
  justify-content: space-between;
  margin-bottom: 24px;

  a {
    font-weight: bold;
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    &:not(.no-underline)::after {
      margin-bottom: 0;
    }
  }
}

h2::after {
  border-bottom-color: $color-blue-20;
}

